# Polygon-Infection-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
scripts/: build.sh  install_deps.sh
src/: Arrow.cpp  Arrow.h  Bar.cpp  Bar.h  Bullet.cpp  Bullet.h  Button.cpp  Button.h  Game.cpp  Game.h  GameOver.cpp  GameOver.h  Global.h  MagicCircle.cpp  MagicCircle.h  Main.cpp  Math.cpp  Math.h  Menu.cpp  Menu.h  Mob.cpp  Mob.h  Particle.cpp  Particle.h  ParticleHandler.cpp  ParticleHandler.h  Player.cpp  Player.h  Source.cpp  Source.h  State.h  Store.cpp  Store.h  Tower.cpp  Tower.h  Upgrade.cpp  Upgrade.h  UpgradeTab.cpp  UpgradeTab.h  Vector2.cpp  (+3 more)
